--- a/WorkflowEngine/appsettings.json
+++ b/WorkflowEngine/appsettings.json
@@ -2,6 +2,7 @@
   "Workflows": {
     "Workflow1": [ "FraudCheck", "Payment", "Book", "PostBooking" ],
     "Workflow2": [ "Payment", "Book" ],
-    "Workflow3": [ "Fraudcheck", "Book" ]
+    "Workflow3": [ "Fraudcheck", "Book" ],
+    "Workflow4": [ "Fraudcheck", "PostBooking" ]
   }
-}
+} 
