--- a/WorkflowEngine/appsettings.json
+++ b/WorkflowEngine/appsettings.json
@@ -3,6 +3,7 @@
     "Workflow1": [ "FraudCheck", "Payment", "Book", "PostBooking" ],
     "Workflow2": [ "Payment", "Book" ],
     "Workflow3": [ "Fraudcheck", "Book" ],
-    "Workflow4": [ "Fraudcheck", "PostBooking" ]
+    "Workflow4": [ "Fraudcheck", "PostBooking" ],
+    "Workflow5": [ "Book", "FraudCheck" ]
   }
 } 
